# AprilTag-Win

./: .clang-format  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  Doxyfile  INSTALLING  Jenkinsfile  LICENSE  M1-staticnoise-standalone.py  Makefile  RCCalibration.h  RCCalibration.mm  RC_build.sh  README.md  __init__.py  animate_replay.py  benchmark.py  build_boxsdk_vs2015_x64.bat  build_boxsdk_vs2015_x86.bat  build_boxsdk_vs2017_x64.bat  build_boxsdk_vs2017_x86.bat  build_boxsdk_win64.bat  calibration_test.py  capture.py  demo_big_solution.py  demo_boelter.py  demo_labloop.py  device_parameters.py  doxygen.cfg  extract_images.py  fuse_maps.py  init.py  kml_generator.py  measure.py  parse_tools.py  rectify.py  rectify_transform_imu.py  release.cmake  replay.py  (+14 more)
android/: .gitignore  Android.toolchain.cmake  CMakeLists.txt  build  cmake.gradle
android/BlockStacking/: build.gradle
android/RCUtility/: .project  AndroidManifest.xml  build.gradle  build.xml
android/RF_ScenePerception/: build.gradle
android/SensorCapture/: .project  AndroidManifest.xml
android/intel_deliverables/: ft210.json
apriltag3-2019-05-29/: CMakeLists.txt  apriltag.c  apriltag.h  apriltag_pose.c  apriltag_pose.h  tag36h11.c
apriltag3-2019-05-29/common/: matd.h  time_util.c  time_util.h
boxsdk/: CMakeLists.txt  my-box-app.cpp  rs-box-app.cpp  rs-box-app.hpp  rs_box_api.h  rs_box_camera.hpp  rs_box_image.hpp  rs_box_sdk.cpp  rs_icon.cpp  rs_icon.h  rs_sf_pose_tracker.cpp  rs_sf_pose_tracker.h
boxsdk/inc/: rs_box_sdk.hpp
corvis/: .gitignore  CMakeLists.txt  LICENSE  Makefile  __init__.py  suppressions
corvis/calibration/: calibration-defaults.json  gigabyte_s11.json  ipad2.json  ipad3.json  ipad4.json  ipadair.json  ipadair2.json  ipadmini.json  ipadminiretina.json  ipadminiretina2.json  iphone4s.json  iphone5.json  iphone5c.json  iphone5s.json  iphone6.json  iphone6plus.json  ipod5.json  ipodtouch.json  unknown.json
corvis/cor/: cor_typemaps.i  cor_types.h  debug.c  dispatch.h  inbuffer.h  mapbuffer.c  mapbuffer.h  packet.c  timestamp.c
corvis/filter/: detector_fast.cpp  detector_fast.h  filter.cpp  filter.h  filter_setup.cpp  model.cpp  model.h  observation.cpp  observation.h  state.h  stereo.cpp  stereo.h  tracker.h  tracker_fast.cpp  tracker_fast.h
corvis/scripts/: benchmark.py  calibrate-six-pose.py  capturecheck.py  captureconvert.py  capturesort.py  capturetofolder.py  capturetostereo.py  eeprom-bin-to-json.py  extractcalibration.py  gentimestamps.py  json-to-eeprom-bin.py  mavtocapture.py  nizantocapture.py  packet.py  project-controller.py  replacecalibration.py  rosbagtocapture.py  rosbagtojson.py  stripcontrollers.py  trim.py  tumview.py  viconalign.py  viconvert.py
corvis/src/: CMakeLists.txt
corvis/swig/: _cor.i  _filter.ipp  _numerics.ipp  cor_typemaps.i  numpy.i
corvis/test/: CMakeLists.txt  homography.cpp  util.cpp  util.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  rs_sf_boxfit.cpp  rs_sf_boxfit.h  rs_sf_boxfit.hpp  rs_sf_boxfit_color.cpp  rs_sf_boxfit_color.hpp  rs_sf_planefit.cpp  rs_sf_planefit.h  rs_sf_planefit.hpp  rs_sf_util.cpp  rs_sf_util.h  rs_shapefit.cpp
src/app/: CMakeLists.txt  example.hpp  rs_planefit_app.cpp  rs_sf_image_io.h  rs_sf_image_io.hpp
src/brainstem/: CMakeLists.txt  main.cpp
src/check_radius/: CMakeLists.txt  check_radius.cpp
src/compare_poses/: compare_poses.cpp
src/create_vocabulary/: CMakeLists.txt  create_vocabulary.cpp
src/d435i-demo/: CMakeLists.txt  camera.json  camera_centered.json  camera_dan_karthik_ces2019.json  camera_jim_no_color.json  d435i_default_json.h  rs_sf_demo_d435i.cpp  rs_sf_demo_d435i.hpp
src/dev/: CMakeLists.txt  example.hpp  rs_planefit_app.cpp  rs_sf_camera.hpp  rs_sf_camera_d435i.cpp  rs_sf_camera_ds5.cpp  rs_sf_device_manager.cpp  rs_sf_device_manager.hpp  rs_sf_file_io.hpp  rs_sf_gl_context.hpp  rs_sf_image_io.hpp
src/feature/: CMakeLists.txt
src/generate_loop_gt/: generate_loop_gt.cpp  gt_generator.h  loop_tester.cpp
src/measure/: benchmark.cpp  benchmark.h  for_each_file.cpp  gl_util.h  gui.h  measure.cpp  offscreen_render.cpp  video_render.cpp  world_state.cpp  world_state.h  world_state_render.cpp
src/movidius/: README.md  mvenv
src/rc_replay/: CMakeLists.txt  main.cpp  rc_replay.cpp  rc_replay.h
src/stereo/: fundamental.cpp  fundamental.h  stereo_features.h  stereo_mesh.cpp
src/synthetic_generator/: CMakeLists.txt  Callbacks.h  Interactive.cpp  README.md  Scenarios.cpp  Scenarios.h  SingleController.cpp  TrackerProxy.cpp  TrackerProxy.h  TwoControllers.cpp  Utils.cpp  Utils.h
src/t265-apriltag-demo/: CMakeLists.txt  t265-apriltag-demo.cpp  t265-apriltag-demo.hpp  t265-apriltag.hpp
src/t265-demo/: Acquisition.cpp  CMakeLists.txt  annotation_upload.py  calibration_Blackfly_computar.txt  calibration_Blackfly_tamron.txt  calibration_logitech.txt  calibration_make.py  csvrwv1.py  csvrwv3.py  exifandxmp_updated.xlsx  photogrammetry_config.json  plot_pose.py  rs_sf_demo_t265.cpp  rs_sf_demo_t265.hpp  spinnaker_cam.cpp  t265-insight.bat  t265-insight.sh  translatev1.py  translatev2.py  translatev3.py  translatev4.py
src/tools/: alloy_merge.cpp  rc_sensor_listener.h
src/tracker/: RCSensorFusionInternals.h  Trace.h  bstream.cpp  bstream.h  calibration.cpp  calibration.h  calibration_json.cpp  calibration_keys.h  calibration_tm2.cpp  calibration_xml.h  compute-template.cpp  concurrent.h  corvis.dictionary  covariance.h  dictionary.cpp  eigen_initializer_list.h  estimate.h  estimate_3d_point.cpp  estimate_epnp.cpp  estimate_five_point.cpp  estimate_fundamental.cpp  estimate_horn.cpp  feature_descriptor.cpp  feature_descriptor.h  file_stream.cpp  file_stream.h  filter.cpp  filter.h  histogram.h  homography.h  map_loader.cpp  map_loader.h  mapper.cpp  mapper.cpp.autosave  mapper.h  matrix.cpp  matrix.h  observation.cpp  observation.h  packet.h  (+36 more)
src/vocabulary/: CMakeLists.txt  resource.cpp  resource.h  resource.rc  voc.c
test/: CMakeLists.txt  test.cpp
test/stereo/: CMakeLists.txt  camera.cpp
windows/: .gitignore  CMakeLists.txt  build.ps1  make.bat
(+3101 files in other folders)
